styles.css
@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;1,300&display=swap");

#outer {
	width: 100%;
	text-align: center;
	margin-bottom: 20px;
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: center;
}

label {
	color: #63012a;
	font-size: 30px;
}

.inner {
	display: inline-block;
}

body {
	background-color: #f69680;
	font-family: Ubuntu;
	overflow: hidden;
}

#main_image {
	transition: 0.5s;
	display: none;
	width: 100vw;
	border: 2px solid #ff0095;
	outline: none;
}

#main_image:hover,
#main_image:focus {
	transition: 0.5s;
	border: 2px solid #2e1263;
}

#load_img {
	position: relative;
	top: 55%;
}

#waiting {
	font-size: 20px;
	color: #ff0077b2;
	font-weight: bold;
}

#waiting::selection {
	background-color: #ff0077b2;
	color: #f69680;
}
#full {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	visibility: hidden;
}

h1 {
	color: #2e1263;
	font-size: 48px;
	margin-bottom: 10px;
	margin-top: 10px;
}

h1::selection {
	background-color: #2e1263;
	color: #f69680;
}

h2 {
	color: #e20c77;
	font-size: 32px;
	margin-top: 10px;
	margin-bottom: 10px;
}

h2::selection {
	background-color: #e20c77;
	color: #f69680;
}

#explanation {
	color: #63012a;
	margin-top: 10px;
	font-size: 17px;
}

#explanation::selection {
	background-color: #63012a;
	color: #f69680;
	margin: 1px;
}

footer {
	color: rgb(85, 0, 134);
}

#copyright::selection,
#learnMore::selection,
#learnMore a::selection {
	background-color: rgb(85, 0, 134);
	color: #f69680;
}

#copyright,
#learnMore {
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: center;
}

#learnMore a {
	transition: 1s;
	color: hsl(270, 100%, 50%);
	font-size: 20px;
}

#learnMore a:hover {
	transition: 1s;
	color: #f69680;
	background-color: hsl(270, 100%, 50%);
}

#selectdate {
	transition: 1s;
	text-transform: uppercase;
	border: none;
	height: 40px;
	width: 250px;
	background-color: #2e1263;
	color: #f69680;
	margin-top: 0px;
	text-align: center;
	font-size: 19px;
	outline: none;
}

#selectdate:hover,
#selectdate:focus {
	background-color: #ff0095;
	color: #e4d506;
	transition: 1s;
}

#go {
	outline: none;
	transition: 1s;
	border: none;
	height: 40px;
	width: 50px;
	background-color: #2e1263;
	color: #f69680;
	margin-top: 0px;
	margin-right: 60px;
	text-align: center;
	font-size: 19px;
}

#go:hover,
#go:focus {
	background-color: #ff0095;
	color: #e4d506;
	transition: 1s;
}

#loader {
	position: absolute;
	top: 40%;
	right: 45%;
	border: none;
	width: 10%;
	height: 20%;
	visibility: visible;
}

#showHalf {
	font-family: Ubuntu;
	outline: none;
	transition: 1s;
	border: none;
	height: 40px;
	width: 300px;
	background-color: #2e1263;
	color: #f69680;
	margin-top: 0px;
	margin-right: 60px;
	text-align: center;
	font-size: 19px;
}

#showHalf:hover,
#showHalf:focus {
	background-color: #ff0095;
	color: #e4d506;
	transition: 1s;
}

/* These Cannot be selected in the page */
#indentExplanation,
#main_image,
#load_img,
#loader,
form {
	-webkit-user-select: none;
	-khtml-user-select: none;
	-webkit-touch-callout: none;
	-moz-user-select: none;
	-o-user-select: none;
	user-select: none;
}

